--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2
	- Added check for MySQL support to first install page, redirects
		to /test.php if mysql support is non-existant
	- Added ability to turn Random/Repeat on and off in localplay
		and also improved localplay page a tiny bit.
	- Fixed a problem with pagination on the admin/users.php page
	- Added ability to turn on User/IP/Date Login history tracking 
		viewable only by Administrators
	- Fixed issue with IE not being able to download files with ? or
		/ or \ in their filenames, replaced with _
	- Added New ACL system which allows user based ACL's  and 
		introduces shared keys for xml-rpc communication and 
		local/remote network definitions for auto-downsampling
	- Introduced new Theming method and 'migrated' all old themes in
		/contrib results may vary. (Thx Ros)
	- Added ability to search by Rating, requires MySQL 4.0 or above
	- Page headers now limited to 30 pages with [....] between top
		and bottom 15.
	- Added Browse by Title functionality (Thx Rubin)
	- Added Min Album size as preference, defaults to 0 (Thx Rubin)
	- Fixed a problem with the automatic registration sorting on user
		lists and admin notification of new users (Thx pb1dft)
	- Fixed 'auto_user' config option on automatic registration it
		wasn't actually respecting the config option (Thx pb1dft)
	- Fixed Implemented XSPF playlist generation (Thx pb1dft)
	- Fixed an issue with 'Download Selected' from playlists passing
		the incorrect songs
	- When adding to a playlist by default it 'appends' rather then
		integrating (Thx Salguod)
	- Now Remembers the Last used playlist correctly. (Thx Salguod)
	- Cleaned up some Formating issues with the Access control 
		interface.